src/parts/layout.sass
@import '../vars'

$sidebar-width: 300px
$top-space: 70px

@keyframes login-fadeIn
	0%
		opacity: 0
		transform: translateY(1em)
	100%
		opacity: 1
		transform: none

@keyframes layout-fadeIn
	0%
		opacity: 0
	100%
		opacity: 1

html, body, #root
	overflow: hidden
	height: 100%
	background: darken(#efeff3, 5%)

.layout-login
	transition: all $ease-smooth .4s
	position: fixed
	top: 0
	left: 0
	right: 0
	bottom: 0
	width: 100%
	height: 100%
	overflow: hidden
	display: flex
	flex-direction: column
	justify-content: center
	align-items: center
	animation: login-fadeIn 1s

.layout
	animation: layout-fadeIn 1s
	transition: all $ease-smooth .4s
	position: fixed
	top: 0
	left: 0
	right: 0
	bottom: 0
	width: 100%
	height: 100%
	overflow: hidden

	&-menuToggle
		display: inline-block
		cursor: pointer
		width: 32px
		height: 32px

		svg
			width: 100%
			height: 100%

	&-bg
		display: flex

		&-sidebar
			width: $sidebar-width
			margin-top: $top-space

	&-fg
		background: #efeff3
		box-shadow: 0 0 4px rgba(#000, .05), 0 0 16px rgba(#000, .05), 0 0 32px rgba(#000, .05)
		display: flex
		flex-direction: column
		justify-content: stretch
		align-items: stretch

		&-body
			overflow: auto
			flex-grow: 1
			-webkit-overflow-scrolling: touch

		&-head
			position: relative
			background: #ffffff
			border-bottom: 1px solid #ddddde
			display: flex
			justify-content: stretch
			align-items: center
			flex-shrink: 0
			min-height: 70px

			&-left,
			&-center,
			&-right
				flex-grow: 1
				padding: 4px 20px

			&-left,
			&-right
				@media (min-width: 640px)
					min-width: 25%

			&-left
				display: flex
				justify-content: flex-start

			&-center
				box-sizing: border-box
				display: flex
				justify-content: center
				align-items: center

				@media (min-width: 640px)
					position: absolute
					top: 0
					bottom: 0
					height: 100%
					width: 64px
					left: 50%
					margin-left: -32px

			&-right
				display: flex
				justify-content: flex-end

	&-bg,
	&-fg
		transition: all $ease-smooth .5s
		position: absolute
		top: 0
		left: 0
		right: 0
		bottom: 0
		width: 100%
		height: 100%
		overflow: auto
		-webkit-overflow-scrolling: touch

	&-bg-sidebar
		transition: all $ease-smooth .5s
		transform: translate3d(10px, 4px, 0)
		opacity: 0

	&-fg
		transform: translate3d(0, 0, 0)

		&-cover
			display: block
			content: ''
			position: absolute
			top: 0
			left: 0
			right: 0
			bottom: 0
			width: 100%
			height: 100%
			background: rgba(#fff, .2)
			opacity: 0
			transition: all linear .5s
			pointer-events: none

	@media (max-width: 1600px)
		&.view-showMenu &-fg
			transform: translate3d($sidebar-width, $top-space, 0)

			&-cover
				pointer-events: auto
				opacity: 1

		&.view-showMenu &-bg-sidebar
			opacity: 1
			transform: translate3d(0, 0, 0)
			transition-delay: .2s

@media (min-width: 1600px)

	.layout .layout
		&-menuToggle
			display: none

		&-in
			display: flex
			width: 100%
			align-items: stretch
			justify-content: stretch
			position: absolute
			top: 0
			left: 0
			right: 0
			bottom: 0
			width: 100%
			height: 100%

		&-fg
			position: static
			transform: translate3d(0, 0, 0)
			flex-grow: 1
			box-shadow: -1px 0 0 rgba(#000, .05)

		&-bg
			flex-shrink: 0
			flex-grow: 0
			flex-basis: 320px
			position: static
			opacity: 1
			transform: translate3d(0, 0, 0)

			&-sidebar
				opacity: 1
				margin-top: 4px

// helpers
html body #root .layout
	.hide-xs
		@media (max-width: 330px)
			display: none

	.hide-s
		@media (max-width: 760px)
			display: none

